// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigsValidation Circular relationship 1`] = `
{
  "errors": {
    "c1": [
      "Circular relationship with 'c2'",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Circular relationship 2`] = `
{
  "errors": {
    "q1": [
      "Circular relationship with 'c2'",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Circular relationship 3`] = `
{
  "errors": {
    "g1": [
      "Circular relationship with 'q1'",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Circular relationship 4`] = `
{
  "valid": true,
}
`;

exports[`ConfigsValidation Duplicated choice values 1`] = `
{
  "errors": {
    "g0_q0": [
      "There are choices with same values",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 2`] = `
{
  "errors": {
    "g0_q0": [
      "There are choices with same values",
    ],
    "id": [
      "Id is not unique",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 3`] = `
{
  "errors": {
    "g0_q0": [
      "There are choices with same values",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 4`] = `
{
  "valid": true,
}
`;

exports[`ConfigsValidation Duplicated choice values 5`] = `
{
  "errors": {
    "g0_q0": [
      "There are choices with same values",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 6`] = `
{
  "errors": {
    "g0_q0": [
      "There are choices with same values",
    ],
    "id": [
      "Id is not unique",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 7`] = `
{
  "errors": {
    "g0_q0": [
      "There are choices with same values",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated choice values 8`] = `
{
  "valid": true,
}
`;

exports[`ConfigsValidation Duplicated ids 1`] = `
{
  "errors": {
    "g0_q0": [
      "There are choices with same values",
    ],
    "id": [
      "Id is not unique",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated ids 2`] = `
{
  "errors": {
    "id": [
      "Id is not unique",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Duplicated ids 3`] = `
{
  "errors": {
    "id": [
      "Id is not unique",
    ],
    "id_q0": [
      "Id is not unique",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No choices 1`] = `
{
  "errors": {
    "g0_q0": [
      "There are no choices",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No choices 2`] = `
{
  "errors": {
    "g0_q0": [
      "There are no choices",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No choices 3`] = `
{
  "errors": {
    "g0_q0": [
      "There are no choices",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No choices 4`] = `
{
  "errors": {
    "g0_q0": [
      "There are no choices",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No choices 5`] = `
{
  "valid": true,
}
`;

exports[`ConfigsValidation No groups or questions 1`] = `
{
  "errors": {
    "": [
      "There are no groups or questions",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No groups or questions 2`] = `
{
  "errors": {
    "": [
      "There are no groups or questions",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No questions 1`] = `
{
  "errors": {
    "g0": [
      "There are no questions",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No questions 2`] = `
{
  "errors": {
    "g0": [
      "There are no questions",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation No questions 3`] = `
{
  "errors": {
    "g0": [
      "There are no questions",
    ],
    "g0_g0": [
      "There are no questions",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Unrecognized ids in choices onSelected 1`] = `
{
  "errors": {
    "c2": [
      "There are unrecognized id(s) in onSelected configs",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Unrecognized ids in choices onSelected 2`] = `
{
  "errors": {
    "c2": [
      "There are unrecognized id(s) in onSelected configs",
    ],
  },
  "valid": false,
}
`;

exports[`ConfigsValidation Unrecognized ids in choices onSelected 3`] = `
{
  "valid": true,
}
`;
